--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,7 @@
       <div class="container">
         <div class="first-section__box">
           <h1 class="main-title">Что объединяет <br>
-            всех владельцев<br>
+            всех владельцев <br>
             смарт телевизоров?</h1>
           <span class="main-title main-title--middle">30 минут ищут фильм,<br>
             а затем идут спать</span>
@@ -170,15 +170,15 @@
             <div class="info-section__content">
               <ul class="how-list">
                 <li class="how-list__item">
-                  <p>как <b>Kiwi</b><br>
+                  <p>как <b>Kiwi</b> <br>
                     для поиска авиабилетов</p>
                 </li>
                 <li class="how-list__item">
-                  <p>как <b>Booking</b><br>
+                  <p>как <b>Booking</b> <br>
                     для поиска отелей</p>
                 </li>
                 <li class="how-list__item">
-                  <p>как <b>Amazon</b><br>
+                  <p>как <b>Amazon</b> <br>
                     для поиска товаров</p>
                 </li>
               </ul>
@@ -243,7 +243,7 @@
 
             <div class="about-box__inner">
               <p>Искусственный интеллект найдет для вас фильм, похожий на тот, что вы указали. Или предложит фильмы под ваше настроение, на любую тему, по сюжету, с нужными актерами и под любой другой запрос</p>
-              <span class="subtitle subtitle--mode">Формируйте подборки<br> до бесконечности</span>
+              <span class="subtitle subtitle--mode">Формируйте подборки <br> до бесконечности</span>
             </div>
           </div>
         </li>
@@ -268,7 +268,7 @@
         </li>
 
         <li class="about-list__item">
-          <span class="subtitle">Уникальный фильтр<br>
+          <span class="subtitle">Уникальный фильтр <br>
             для поиска фильмов и сериалов</span>
           <div class="about-box about-box--mode">
             <div class="about-box__image">
@@ -297,7 +297,7 @@
 
             <div class="about-box__inner">
               <p>От студий, онлайн-кинотеатров, киносайтов, критиков, лидеров мнений кино, от известных личностей и даже локальных блогеров</p>
-              <span class="subtitle subtitle--mode">Переключайтесь между<br> подборками в один клик</span>
+              <span class="subtitle subtitle--mode">Переключайтесь между <br> подборками в один клик</span>
             </div>
           </div>
         </li>
@@ -314,7 +314,7 @@
 
             <div class="about-box__inner">
               <p>От всех онлайн кинотеатров, по всем жанрам, из всех подписок - собраны на экране. Выбирайте интересные для вас каналы и лучшие условия их просмотра</p>
-              <span class="subtitle subtitle--mode">Листайте каналы<br>
+              <span class="subtitle subtitle--mode">Листайте каналы <br>
                 в удовольствие
                 </span>
             </div>
@@ -351,7 +351,7 @@
                       <use href='img/sprite/sprite.svg#icon2'></use>
                     </svg>
                   </span>
-                  <p>Не меняется при<br> просмотре с любого угла
+                  <p>Не меняется при <br> просмотре с любого угла
                   </p>
                   </div>
                 </li>
@@ -362,7 +362,7 @@
                       <use href='img/sprite/sprite.svg#icon3'></use>
                     </svg>
                   </span>
-                  <p>Сохраняются в течение<br> минимум 10 лет</p>
+                  <p>Сохраняются в течение <br> минимум 10 лет</p>
                   </div>
                 </li>
               </ul>
@@ -379,7 +379,7 @@
                         <use href='img/sprite/sprite.svg#icon4'></use>
                       </svg>
                     </span>
-                    <p>Без использования<br> белого субпикселя</p>
+                    <p>Без использования <br> белого субпикселя</p>
                     </div>
                   </li>
                   <li class="specs-list__item">
@@ -389,7 +389,7 @@
                         <use href='img/sprite/sprite.svg#icon5'></use>
                       </svg>
                     </span>
-                    <p>Гарантирует полное<br> разрешение</p>
+                    <p>Гарантирует полное <br> разрешение</p>
                     </div>
                   </li>
                 </ul>
@@ -405,7 +405,7 @@
                         <use href='img/sprite/sprite.svg#icon6'></use>
                       </svg>
                     </span>
-                    <p>Как в лучших в мире<br> ноутбуках</p>
+                    <p>Как в лучших в мире <br> ноутбуках</p>
                     </div>
                   </li>
                   <li class="specs-list__item">
@@ -415,7 +415,7 @@
                         <use href='img/sprite/sprite.svg#icon7'></use>
                       </svg>
                     </span>
-                    <p>Точно и натурально<br> передает все цвета</p>
+                    <p>Точно и натурально <br> передает все цвета</p>
                     </div>
                   </li>
                 </ul>
@@ -606,8 +606,8 @@
 
   <!-- @include('partials/footer.html')
   @include('partials/modals.html') -->
-
-  <script src="js/main.js"></script>
+<!-- 
+  <script src="js/main.js"></script> -->
 </body>
 
 </html>
